--- a/activity/src/app/receiver/receiver.component.css
+++ b/activity/src/app/receiver/receiver.component.css
@@ -7,3 +7,30 @@
     background: inherit;
     box-shadow: 1px 1px 2px black, 0 0 25px lightblue, 0 0 5px white;
   }
+  /* thead {color:green;}
+  tbody {color:blue;}
+  tfoot {color:red;}
+
+  table, th, td {
+    border: 1px solid black;
+  } */
+  .table{
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  }
+  .table td, .table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  .table tr:nth-child(even){background-color: #f2f2f2;}
+  
+  .table tr:hover {background-color: #ddd;}
+  
+  .table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: skyblue;
+    color: white;
+  }
