--- a/activity/src/app/sender/sender.component.css
+++ b/activity/src/app/sender/sender.component.css
@@ -29,4 +29,25 @@
     background-color: inherit;
     box-shadow: 1px 1px 2px black, 0 0 25px lightblue, 0 0 5px white;
   }
+  .table{
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  }
+  .table td, .table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  .table tr:nth-child(even){background-color: #f2f2f2;}
+  
+  .table tr:hover {background-color: #ddd;}
+  
+  .table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: skyblue;
+    color: white;
+  }
  
