--- a/activity/src/app/app.component.html
+++ b/activity/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- <app-form></app-form> -->
 Activitty4
 <app-parent></app-parent><br>
-Activity5
+Activity5 & 6
 <app-sender></app-sender>
 
 <router-outlet></router-outlet>
