--- a/activity/src/app/sender/sender.component.html
+++ b/activity/src/app/sender/sender.component.html
@@ -11,7 +11,7 @@
                             <input class="form-control" [(ngModel)]="fullname" type="text" id="fullname"><br><br>
                             <div class="custom-control custom-checkbox">
                                 <input [(ngModel)]="enrolled" (change)="toggleEditable($event)" type="checkbox" class="custom-control-input" id="defaultUnchecked">
-                                <label class="custom-control-label" for="defaultUnchecked">Default unchecked</label>
+                                <label class="custom-control-label" for="defaultUnchecked">Enrolled</label>
                             </div><br>
                             <!-- <label for="enrolled">Enrolled:</label>
                             <input [(ngModel)]="enrolled" type="checkbox" id="enrolled"
