adding project bar

--- a/activity/src/app/data-driven/data-driven.component.html
+++ b/activity/src/app/data-driven/data-driven.component.html
@@ -1,12 +1,12 @@
 <mat-card class="container">
-    <h1 class="header">Data Driven Form</h1>
+    <h1 class="header">Data-Driven Form</h1>
     <hr>
     <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
         <label>First Name:</label>
         <input type="text" class="form-control" formControlName="fname" required>
         <label>Last Name:</label>
         <input type="text" class="form-control" formControlName="lname" required>
-        <label>Email:</label>
+        <label>Email Address:</label>
         <input type="email" class="form-control" formControlName="email" required><br>
         <mat-card>
             <div class="row" formGroupName="address">
@@ -19,7 +19,7 @@
                     <input type="text" class="form-control" formControlName="city" required>
                 </div>
                 <div class="column">
-                    <label>State:</label>
+                    <label>State/Country:</label>
                     <input type="text" class="form-control" formControlName="state" required>
                 </div>
                 <div class="column">
@@ -30,6 +30,7 @@
         </mat-card>
         <button type="submit" [disabled]="!reactiveForm.valid" mat-raised-button color="primary">Submit</button>
     </form>
+    Your Personal Info: 
     <div *ngFor="let item of info">
         <p>{{item}}</p>
     </div>
