--- a/activity/src/app/app.component.html
+++ b/activity/src/app/app.component.html
@@ -1,40 +1,2 @@
-<!-- <app-form></app-form> -->
-<mat-toolbar id="toolbar">
-    <mat-toolbar-row>
-        <a [routerLink]="['/']" routerLinkActive="router-link-active"><span class="angular">Angular</span></a>
-        <span class="example-spacer"></span>
-        <button class="btn btn-primary" [matMenuTriggerFor]="mennu">Activities</button>
-        <mat-menu #mennu="matMenu">
-            <a [routerLink]="['/activity3']"><button mat-menu-item>Activity
-                    3</button></a>
-            <a [routerLink]="['/activity4']"><button mat-menu-item>Activity
-                    4</button></a>
-            <a [routerLink]="['/activity5']"><button mat-menu-item>Activity
-                    5&6</button></a>
-            <a [routerLink]="['/registerform']"><button mat-menu-item>Activity
-                    8 & 9</button></a>
-            <button mat-menu-item [matMenuTriggerFor]="menu">Form</button>
-            <mat-menu #menu="matMenu">
-                <a [routerLink]="['/activity71']"><button mat-menu-item>Template
-                        Driven Form</button></a>
-                <a [routerLink]="['/activity72']"><button mat-menu-item>Data
-                        Driven Form</button></a>
-            </mat-menu>
-        </mat-menu>
-        <button class="btn btn-primary" [matMenuTriggerFor]="menu2">Projects</button>
-        <mat-menu #menu2="matMenu">
-            <a [routerLink]="['/project1']"><button mat-menu-item>Data
-                    Project 1</button></a>
-        </mat-menu>
-    </mat-toolbar-row>
-</mat-toolbar>
-<!-- <app-form [hidden]="!show3"></app-form>
-<app-parent [hidden]="!show4"></app-parent><br>
-<app-sender [hidden]="!show5"></app-sender>
-<app-template-driven [hidden]="!show71"></app-template-driven>
-<app-data-driven [hidden]="!show72"></app-data-driven>
-<app-parent-form [hidden]="!showpr1"></app-parent-form> -->
-
-<!-- <app-register-form></app-register-form> -->
-
+<app-navigation></app-navigation>
 <router-outlet></router-outlet>
